{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 186,
  "lineage": "ad8de5d4-eac7-0567-a17b-ec9c10d5199c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:loadbalancer/app/alb-prod/237ca4337b6be5e4",
            "arn_suffix": "app/alb-prod/237ca4337b6be5e4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-prod-385525510.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:loadbalancer/app/alb-prod/237ca4337b6be5e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-prod",
            "preserve_host_header": false,
            "region": "eu-north-1",
            "security_groups": [
              "sg-058715871ae079f7e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d449d1d05c446f1f"
              },
              {
                "subnet_id": "subnet-0e1499736b7b6f61c"
              }
            ],
            "subnets": [
              "subnet-0d449d1d05c446f1f",
              "subnet-0e1499736b7b6f61c"
            ],
            "tags": {
              "Env": "production",
              "Name": "alb-prod"
            },
            "tags_all": {
              "Env": "production",
              "Name": "alb-prod"
            },
            "vpc_id": "vpc-0e86822103783a36c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:loadbalancer/app/alb-prod/237ca4337b6be5e4"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:listener/app/alb-prod/237ca4337b6be5e4/591be15abf916541",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:targetgroup/tg-prod/779e6ac5f99507bb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:listener/app/alb-prod/237ca4337b6be5e4/591be15abf916541",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:loadbalancer/app/alb-prod/237ca4337b6be5e4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-north-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:listener/app/alb-prod/237ca4337b6be5e4/591be15abf916541"
          },
          "dependencies": [
            "module.alb.aws_lb.prod",
            "module.alb.aws_lb_target_group.prod",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:targetgroup/tg-prod/779e6ac5f99507bb",
            "arn_suffix": "targetgroup/tg-prod/779e6ac5f99507bb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:targetgroup/tg-prod/779e6ac5f99507bb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:622333992348:loadbalancer/app/alb-prod/237ca4337b6be5e4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-prod",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "production",
              "Name": "tg-prod"
            },
            "tags_all": {
              "Env": "production",
              "Name": "tg-prod"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:622333992348:targetgroup/tg-prod/779e6ac5f99507bb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:security-group/sg-058715871ae079f7e",
            "description": "ALB PROD - HTTP from internet, outbound to VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058715871ae079f7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tsg-alb-prod",
            "name_prefix": "",
            "owner_id": "622333992348",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "production",
              "Name": "tsg-alb-prod"
            },
            "tags_all": {
              "Env": "production",
              "Name": "tsg-alb-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "sg-058715871ae079f7e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:security-group/sg-0f5634222ea747806",
            "description": "PROD EC2 - HTTP from VPC (ALB), all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5634222ea747806",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC (ALB will restrict this further)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tsg-ec2-prod",
            "name_prefix": "",
            "owner_id": "622333992348",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "production",
              "Name": "tsg-ec2-prod"
            },
            "tags_all": {
              "Env": "production",
              "Name": "tsg-ec2-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "sg-0f5634222ea747806",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cc98ceaaf78a0a6",
            "arn": "arn:aws:ec2:eu-north-1:622333992348:elastic-ip/eipalloc-04cc98ceaaf78a0a6",
            "association_id": "eipassoc-0ef5cc374cfd572ee",
            "domain": "vpc",
            "id": "eipalloc-04cc98ceaaf78a0a6",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ed9cc0bb5c6c952c",
            "private_dns": "ip-10-0-1-113.eu-north-1.compute.internal",
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-13-63-86-253.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.86.253",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "eip-nat-mathieu"
            },
            "tags_all": {
              "Name": "eip-nat-mathieu"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:internet-gateway/igw-026536274a953383c",
            "id": "igw-026536274a953383c",
            "owner_id": "622333992348",
            "region": "eu-north-1",
            "tags": {
              "Name": "igw-mathieu"
            },
            "tags_all": {
              "Name": "igw-mathieu"
            },
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cc98ceaaf78a0a6",
            "association_id": "eipassoc-0ef5cc374cfd572ee",
            "connectivity_type": "public",
            "id": "nat-00ae23632bd8e1b69",
            "network_interface_id": "eni-0ed9cc0bb5c6c952c",
            "private_ip": "10.0.1.113",
            "public_ip": "13.63.86.253",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d449d1d05c446f1f",
            "tags": {
              "Name": "ngw-mathieu"
            },
            "tags_all": {
              "Name": "ngw-mathieu"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:route-table/rtb-0bd1c8f32577b10cb",
            "id": "rtb-0bd1c8f32577b10cb",
            "owner_id": "622333992348",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00ae23632bd8e1b69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-mathieu"
            },
            "tags_all": {
              "Name": "private-mathieu"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:route-table/rtb-059c63fd5537d12cb",
            "id": "rtb-059c63fd5537d12cb",
            "owner_id": "622333992348",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026536274a953383c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-mathieu"
            },
            "tags_all": {
              "Name": "public-mathieu"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_private_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cae278d42273825b",
            "region": "eu-north-1",
            "route_table_id": "rtb-0bd1c8f32577b10cb",
            "subnet_id": "subnet-0004cb38d14bc389b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_private",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet_private_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d94bf69e15123517",
            "region": "eu-north-1",
            "route_table_id": "rtb-0bd1c8f32577b10cb",
            "subnet_id": "subnet-09f4870c61036152e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_private",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_public_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050c893c7dd22ebcf",
            "region": "eu-north-1",
            "route_table_id": "rtb-059c63fd5537d12cb",
            "subnet_id": "subnet-0d449d1d05c446f1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet_public_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3145630a26b4f12",
            "region": "eu-north-1",
            "route_table_id": "rtb-059c63fd5537d12cb",
            "subnet_id": "subnet-0e1499736b7b6f61c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_private_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:subnet/subnet-0004cb38d14bc389b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0004cb38d14bc389b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "subnet_private_1"
            },
            "tags_all": {
              "Name": "subnet_private_1"
            },
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-0004cb38d14bc389b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "subnet_private_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:subnet/subnet-09f4870c61036152e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f4870c61036152e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "subnet_private_2"
            },
            "tags_all": {
              "Name": "subnet_private_2"
            },
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-09f4870c61036152e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_public_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:subnet/subnet-0d449d1d05c446f1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d449d1d05c446f1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "subnet_public_1"
            },
            "tags_all": {
              "Name": "subnet_public_1"
            },
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-0d449d1d05c446f1f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet_public_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:subnet/subnet-0e1499736b7b6f61c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1499736b7b6f61c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "subnet_public_2"
            },
            "tags_all": {
              "Name": "subnet_public_2"
            },
            "vpc_id": "vpc-0e86822103783a36c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-0e1499736b7b6f61c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:622333992348:vpc/vpc-0e86822103783a36c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6eb38228c7f2cd2",
            "default_route_table_id": "rtb-031b88041aa09a3f1",
            "default_security_group_id": "sg-0d74d185a25ce7136",
            "dhcp_options_id": "dopt-0e5afec668df5d1d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e86822103783a36c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031b88041aa09a3f1",
            "owner_id": "622333992348",
            "region": "eu-north-1",
            "tags": {
              "Name": "vpc-mathieu"
            },
            "tags_all": {
              "Name": "vpc-mathieu"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}